fixed spacing and sizing for login and create account pages

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -55,6 +55,25 @@
   margin-right: 100px;
 }
 
+.alignLogin{
+  margin-top: 30px;
+  margin-left: 100px;
+  margin-right: 100px;
+}
+
+.loginpage{
+  margin-left: 200px;
+}
+
+.alignSignUp{
+  margin-top: 30px;
+  margin-left: 15%;
+  margin-right: 100px;
+}
+
+.signupage{
+  margin-left: 100px;
+}
 
 .carousel-caption a{
   color: white;
